Overflow fix

--- a/styles/scss/global/layout.scss
+++ b/styles/scss/global/layout.scss
@@ -19,6 +19,10 @@ body {
     }
 }
 
+.wrapper {
+    overflow-x: hidden;
+}
+
 .container {
     width: 100vw;
     margin: 0 auto;
